--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,7 +7,6 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
 }
 
 .title a {
@@ -16,7 +15,7 @@
 }
 
 .grid {
-  width: 32rem;
+  width: 62rem;
   display: flex;
   position: relative;
   align-items: left;
@@ -27,19 +26,16 @@
 .grid .card {
   padding: 1.5rem;
   width: 100%;
-  margin: 0.5rem 0.45rem 2rem;
+  margin: 2.5rem 0.45rem 2rem;
 }
 
 .card {
-  margin: 3rem;
-  padding: 0.5rem;
-  width: 10rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+    position: relative; 
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .5rem;
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 7%), 0 4px 6px -2px rgb(0 0 0 / 5%);
 }
 
 .card:hover,
@@ -47,6 +43,8 @@
 .card:active {
   color: #0070f3;
   border-color: #0070f3;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .8s ease-in-out;
 }
 
 .card .div {
