--- a/src/components/ClientForm/clientForm.module.css
+++ b/src/components/ClientForm/clientForm.module.css
@@ -9,19 +9,22 @@
 
 .registrar {
     margin-top: 1.4rem;
-    background-color: #00b74a;
+    /* background-color: #00b74a; */
 }
 
 .registrar:hover {
-    background-color: #198754;
+    /* background-color: #198754; */
 }
 
 .limpar {
-    background-color: #ffc107;
+    /* background-color: #ffc107; */
+    background-color: #fff;
+    color: rgb(0, 70, 182);;
 }
 
 .limpar:hover {
-    background-color: #ffa900;
+    /* background-color: #ffa900; */
+    background-color: rgb(233, 233, 233);
 }
 
 @media (max-width: 600px) {
