--- a/src/components/ClientList/clientList.module.css
+++ b/src/components/ClientList/clientList.module.css
@@ -59,6 +59,42 @@
 
 @media (max-width:485px) {
     .list {
-        padding: 0;
+        padding: 0;  
+    }
+    
+    .tabela { 
+        width: 60%;
+    } 
+    .tabela tr {
+        width: 100%;
+        display: flex;
+        height: 16rem;
+        height: 2.6rem;
+        
+    }
+    .tabela td {
+        width: 5rem;
+        border: 1px solid #000;
+    }
+    
+    .tabela tr > th:nth-child( n + 5 ) {
+        visibility: hidden;    
+        background-color: #000;
+        float: right;
+    }
+
+    .tabela th {
+        width: 24%;
+        text-align: center;
+        
+    }
+    
+    .tabela tr:first-child {
+        
+    }
+    
+    .main_content_section button {
+        font-size: .65rem;
+        line-height: 1.5;
     }
 }
