--- a/src/components/mainHeader/mainHeader.module.css
+++ b/src/components/mainHeader/mainHeader.module.css
@@ -61,26 +61,27 @@
 /* esconder para Mobile */
 @media (max-width:485px) {
     .main_Header { 
-        /* visibility: hidden; */
         position: fixed;
         top: 0;
         padding: 0;
         width: 100%;
-        height: 3.5rem;
+        height: 3.9rem;
         display: flex;
         flex-direction: row;
         overflow-y: hidden;
         position: fixed;
     }
     .main_header_link{
-        font-size: 0.5rem;
-        width: 8rem;
+        font-size: 0.56rem;
+        width: 10rem;
+        margin: 0;
     }
     .user_list {
         visibility: hidden;
     }
     .btnUsers {
+        margin: 0;
         font-size: 1.3rem;
-        padding-left: 1.5rem;
+        padding: 0 1.5rem 3rem 2.2rem;
     }
 }
