--- a/src/components/ClientList/clientList.module.css
+++ b/src/components/ClientList/clientList.module.css
@@ -57,24 +57,18 @@
     background: #dd2235;
 }
 
-@media (max-width:485px) {
-    .list {
-        padding: 0;  
-    }
-    
-    .tabela { 
+@media (max-width:820px) {
+    .card {
         width: 60%;
-    } 
-    .tabela tr {
-        width: 100%;
-        display: flex;
-        height: 16rem;
-        height: 2.6rem;
-        
     }
+}
+
+@media (max-width:485px) {
     .tabela td {
-        width: 5rem;
-        border: 1px solid #000;
+        width: 21%;
+        display: inline-block;
+        vertical-align: middle;
+        line-height: 1.5;
     }
     
     .tabela tr > th:nth-child( n + 5 ) {
@@ -86,11 +80,11 @@
     .tabela th {
         width: 24%;
         text-align: center;
-        
     }
     
-    .tabela tr:first-child {
-        
+    .tabela button {
+        width: 4rem;
+        margin-left: 4.8rem;
     }
     
     .main_content_section button {
