--- a/src/components/mainHeader/mainHeader.module.css
+++ b/src/components/mainHeader/mainHeader.module.css
@@ -70,6 +70,7 @@
         flex-direction: row;
         overflow-y: hidden;
         position: fixed;
+        z-index: 998;
     }
     .main_header_link{
         font-size: 0.56rem;
